[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/guikeybinding.gd" type="Script" id=1]
[ext_resource path="res://Scripts.gd" type="Script" id=2]

[node name="guikeybinding" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="GridContainer" type="GridContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -58.5
margin_top = -34.0
margin_right = 58.5
margin_bottom = 34.0
custom_constants/vseparation = 6
custom_constants/hseparation = 12
columns = 2

[node name="GridContainer2" type="GridContainer" parent="GridContainer"]
margin_right = 373.0
margin_bottom = 107.0
custom_constants/vseparation = 19

[node name="HBoxContainer" type="HBoxContainer" parent="GridContainer/GridContainer2"]
margin_right = 373.0
margin_bottom = 20.0
custom_constants/separation = 6
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Controls" type="Button" parent="GridContainer/GridContainer2/HBoxContainer"]
margin_right = 73.0
margin_bottom = 20.0
text = "Controles"

[node name="Music" type="Button" parent="GridContainer/GridContainer2/HBoxContainer"]
margin_left = 79.0
margin_right = 136.0
margin_bottom = 20.0
text = "Música"

[node name="Continue" type="Button" parent="GridContainer/GridContainer2/HBoxContainer"]
margin_left = 142.0
margin_right = 215.0
margin_bottom = 20.0
text = "Continuar"

[node name="Main menu" type="Button" parent="GridContainer/GridContainer2/HBoxContainer"]
margin_left = 221.0
margin_right = 328.0
margin_bottom = 20.0
text = "Menú principal"

[node name="Quit" type="Button" parent="GridContainer/GridContainer2/HBoxContainer"]
margin_left = 334.0
margin_right = 373.0
margin_bottom = 20.0
text = "Salir"

[node name="GridContainer" type="GridContainer" parent="GridContainer/GridContainer2"]
margin_top = 39.0
margin_right = 373.0
margin_bottom = 107.0
columns = 2

[node name="jump" type="Label" parent="GridContainer/GridContainer2/GridContainer"]
margin_top = 3.0
margin_right = 64.0
margin_bottom = 17.0
text = "Saltar:"
align = 3
valign = 3

[node name="ui_jump" type="Button" parent="GridContainer/GridContainer2/GridContainer" groups=["button_keys"]]
margin_left = 68.0
margin_right = 117.0
margin_bottom = 20.0
rect_min_size = Vector2( 49, 20 )
focus_mode = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
enabled_focus_mode = 0
text = "Space"
script = ExtResource( 2 )

[node name="left" type="Label" parent="GridContainer/GridContainer2/GridContainer"]
margin_top = 27.0
margin_right = 64.0
margin_bottom = 41.0
text = "Izquierda:"
align = 3

[node name="ui_left" type="Button" parent="GridContainer/GridContainer2/GridContainer" groups=["button_keys"]]
margin_left = 68.0
margin_top = 24.0
margin_right = 117.0
margin_bottom = 44.0
rect_min_size = Vector2( 49, 20 )
focus_mode = 0
enabled_focus_mode = 0
text = "Left"
script = ExtResource( 2 )

[node name="right" type="Label" parent="GridContainer/GridContainer2/GridContainer"]
margin_top = 51.0
margin_right = 64.0
margin_bottom = 65.0
text = "Derecha:"
align = 3

[node name="ui_right" type="Button" parent="GridContainer/GridContainer2/GridContainer" groups=["button_keys"]]
margin_left = 68.0
margin_top = 48.0
margin_right = 117.0
margin_bottom = 68.0
rect_min_size = Vector2( 49, 20 )
focus_mode = 0
enabled_focus_mode = 0
text = "Right"
script = ExtResource( 2 )

[connection signal="pressed" from="GridContainer/GridContainer2/HBoxContainer/Main menu" to="." method="_on_Main_menu_pressed"]
[connection signal="pressed" from="GridContainer/GridContainer2/HBoxContainer/Quit" to="." method="_on_Quit_pressed"]
